--- a/UmbracoLia/appsettings.json
+++ b/UmbracoLia/appsettings.json
@@ -22,5 +22,9 @@
         }
       }
     }
+  },
+  "ConnectionStrings": {
+    "umbracoDbDSN": "Server=tcp:umbraco-project.database.windows.net,1433;Database=UMbracoProject;User ID=Mattiask@umbraco-project;Password=gqeZE335mqiw9eE",
+    "umbracoDbDSN_ProviderName": "Microsoft.Data.SqlClient"
   }
 }
